--- a/css/bootstrap-cerulean.css
+++ b/css/bootstrap-cerulean.css
@@ -1188,6 +1188,9 @@ select:focus:required:invalid:focus {
   *zoom: 1;
   margin-bottom: 0;
 }
+.user_input{
+    display: inline-table;
+}
 .form-search .hide,
 .form-inline .hide,
 .form-horizontal .hide {
@@ -3482,6 +3485,9 @@ input[type="submit"].btn.btn-mini {
 .modal-open .tooltip {
   z-index: 2070;
 }
+
+
+
 .modal-backdrop {
   position: fixed;
   top: 0;
@@ -3523,6 +3529,7 @@ input[type="submit"].btn.btn-mini {
   -moz-background-clip: padding-box;
   background-clip: padding-box;
 }
+
 .modal.fade {
   -webkit-transition: opacity .3s linear, top .3s ease-out;
   -moz-transition: opacity .3s linear, top .3s ease-out;
@@ -3538,6 +3545,7 @@ input[type="submit"].btn.btn-mini {
   padding: 9px 15px;
   border-bottom: 1px solid #eee;
 }
+
 .modal-header .close {
   margin-top: 2px;
 }
@@ -3546,9 +3554,11 @@ input[type="submit"].btn.btn-mini {
   max-height: 400px;
   padding: 15px;
 }
+
 .modal-form {
   margin-bottom: 0;
 }
+
 .modal-footer {
   padding: 14px 15px 15px;
   margin-bottom: 0;
@@ -3563,6 +3573,7 @@ input[type="submit"].btn.btn-mini {
   box-shadow: inset 0 1px 0 #ffffff;
   *zoom: 1;
 }
+
 .modal-footer:before,
 .modal-footer:after {
   display: table;
